Fixed Sound Loop overlapping & Add book pagination below book reading preview

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ main.container{
   margin-top:58px;
 }
 
-main{
+main.main-editor{
   height: 100vh;
   overflow-y:scroll;
 }
@@ -401,11 +401,11 @@ div#vbBookCover{
   /* background-repeat-x: no-repeat; */
   height: 100%;
   background-size: contain!important;
-  flex: auto;
+  flex: 10;
 }
 
 div#vbBookNavigationList{
-  flex:2;
+  flex:4;
   overflow-y: scroll;
   border-left: 1px solid #FFD6FF;
   border-radius: unset;
@@ -505,8 +505,21 @@ ul.vb-section-list-nav > li.act-section{
 }
 
 div#style-bookview{
-  /* overflow-y: scroll; */
   height: 100%;
+}
+
+#vbPageNav{
+  justify-content: space-between;
+}
+
+h1.vb-book-main-title{
+  margin: 150px 0;
+}
+
+h1.vb-book-main-title > small{
+  margin-top: 10px;
+  font-style: italic;
+  font-weight: 400;
 }
 
 /*** CSS LOAD EFFECTS ***/
